--- a/familytreemap.html
+++ b/familytreemap.html
@@ -38,7 +38,9 @@
 	
 	<!--voeg geojson met familiegegevens toe-->
     <script src="familiedata.js" type="text/javascript"></script>
-
+	<!--voeg andere scripts toe-->
+	<script src="procsv.js" type="text/javascript"></script>
+	<script src="googledocurl.js" type="text/javascript"></script>
 	
 	
 	<script>
@@ -91,6 +93,30 @@ for (i = 0; i < features.length; i += 1) {
 
 */
 
+
+
+//laad google sheet gegevens
+  $.ajax({
+       url:'csv/Options.csv',
+       type:'HEAD',
+       error: function() {
+         // Options.csv does not exist, so use Tabletop to fetch data from
+         // the Google sheet
+         mapData = Tabletop.init({
+           key: googleDocURL,
+           callback: function(data, mapData) { onMapDataLoad(); }
+         });
+       },
+       success: function() {
+         // Get all data from .csv files
+         mapData = Procsv;
+         mapData.load({
+           self: mapData,
+           tabs: ['Options','Polygons', 'Polylines'],
+           callback: onMapDataLoad
+         });
+       }
+   });
 
 
 
