--- a/familytreemap.html
+++ b/familytreemap.html
@@ -134,7 +134,7 @@ makeRequest();
 
 
 
-
+function procData(){
 for (i = 0; i < adreslist; i += 1) {
 	adres=adreslist[i];
 	//leaflet en nominatim
@@ -208,9 +208,9 @@ for (i = 0; i < naamlist.length; i += 1) {
 	}
 }
 
-
+}
 	
-	
+procData();
 
 
 </script>
