--- a/familytreemap.html
+++ b/familytreemap.html
@@ -119,7 +119,7 @@ function leesGoogleSheet(){
 			addPoints(adres,naam);
         }
 		//verbind de punten
-		map.eachLayer(function(layer){		
+		map.eachLayer(function(layer)){		
 			console.log(layer);
 		}
 	  } else {
